src/compiler/syntactic/generated/Shexl2Parser.java
// Generated from C:/Users/Willy/Documents/github/weso/shex-lite/src/compiler/grammar\Shexl2.g4 by ANTLR 4.8
package compiler.syntactic.generated;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class Shexl2Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, LABEL=21, IRI_LITERAL=22, INT_LITERAL=23, 
		REAL_LITERAL=24, STRING_LITERAL=25, SKIP_=26;
	public static final int
		RULE_schema = 0, RULE_statement = 1, RULE_import_stmt = 2, RULE_definition_stmt = 3, 
		RULE_start_def_stmt = 4, RULE_prefix_def_stmt = 5, RULE_base_def_stmt = 6, 
		RULE_shape_def_stmt = 7, RULE_expression = 8, RULE_literal_expr = 9, RULE_literal_real_value_expr = 10, 
		RULE_literal_string_value_expr = 11, RULE_literal_iri_value_expr = 12, 
		RULE_cardinality_expr = 13, RULE_constraint_expr = 14, RULE_constraint_node_expr = 15, 
		RULE_constraint_block_triple_expr = 16, RULE_constraint_triple_expr = 17, 
		RULE_constraint_node_iri_expr = 18, RULE_constraint_valid_value_set_type = 19, 
		RULE_constraint_node_any_type_expr = 20, RULE_constraint_node_non_literal_expr = 21, 
		RULE_constraint_value_set_expr = 22, RULE_constraint_node_bnode_expr = 23, 
		RULE_constraint_node_literal_expr = 24, RULE_call_expr = 25, RULE_call_prefix_expr = 26, 
		RULE_call_shape_expr = 27;
	private static String[] makeRuleNames() {
		return new String[] {
			"schema", "statement", "import_stmt", "definition_stmt", "start_def_stmt", 
			"prefix_def_stmt", "base_def_stmt", "shape_def_stmt", "expression", "literal_expr", 
			"literal_real_value_expr", "literal_string_value_expr", "literal_iri_value_expr", 
			"cardinality_expr", "constraint_expr", "constraint_node_expr", "constraint_block_triple_expr", 
			"constraint_triple_expr", "constraint_node_iri_expr", "constraint_valid_value_set_type", 
			"constraint_node_any_type_expr", "constraint_node_non_literal_expr", 
			"constraint_value_set_expr", "constraint_node_bnode_expr", "constraint_node_literal_expr", 
			"call_expr", "call_prefix_expr", "call_shape_expr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'import'", "'start'", "'='", "'prefix'", "':'", "'base'", "'*'", 
			"'+'", "'?'", "'{'", "'}'", "','", "'iri'", "'.'", "'nonliteral'", "'['", 
			"']'", "'bnode'", "'literal'", "'@'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, "LABEL", "IRI_LITERAL", 
			"INT_LITERAL", "REAL_LITERAL", "STRING_LITERAL", "SKIP_"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Shexl2.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public Shexl2Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class SchemaContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(Shexl2Parser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public SchemaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_schema; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Shexl2Listener ) ((Shexl2Listener)listener).enterSchema(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Shexl2Listener ) ((Shexl2Listener)listener).exitSchema(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Shexl2Visitor ) return ((Shexl2Visitor<? extends T>)visitor).visitSchema(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SchemaContext schema() throws RecognitionException {
		SchemaContext _localctx = new SchemaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_schema);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(56);
				statement();
				}
				}
				setState(59); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << LABEL) | (1L << IRI_LITERAL))) != 0) );
			setState(61);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public Import_stmtContext import_stmt() {
			return getRuleContext(Import_stmtContext.class,0);
		}
		public Definition_stmtContext definition_stmt() {
			return getRuleContext(Definition_stmtContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Shexl2Listener ) ((Shexl2Listener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Shexl2Listener ) ((Shexl2Listener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Shexl2Visitor ) return ((Shexl2Visitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(65);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(63);
				import_stmt();
				}
				break;
			case T__1:
			case T__3:
			case T__4:
			case T__5:
			case LABEL:
			case IRI_LITERAL:
				enterOuterAlt(_localctx, 2);
				{
				setState(64);
				definition_stmt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Import_stmtContext extends ParserRuleContext {
		public Literal_iri_value_exprContext iri;
		public Literal_iri_value_exprContext literal_iri_value_expr() {
			return getRuleContext(Literal_iri_value_exprContext.class,0);
		}
		public Import_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_import_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Shexl2Listener ) ((Shexl2Listener)listener).enterImport_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Shexl2Listener ) ((Shexl2Listener)listener).exitImport_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Shexl2Visitor ) return ((Shexl2Visitor<? extends T>)visitor).visitImport_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Import_stmtContext import_stmt() throws RecognitionException {
		Import_stmtContext _localctx = new Import_stmtContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_import_stmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			match(T__0);
			setState(68);
			((Import_stmtContext)_localctx).iri = literal_iri_value_expr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Definition_stmtContext extends ParserRuleContext {
		public Start_def_stmtContext start_def_stmt() {
			return getRuleContext(Start_def_stmtContext.class,0);
		}
		public Prefix_def_stmtContext prefix_def_stmt() {
			return getRuleContext(Prefix_def_stmtContext.class,0);
		}
		public Base_def_stmtContext base_def_stmt() {
			return getRuleContext(Base_def_stmtContext.class,0);
		}
		public Shape_def_stmtContext shape_def_stmt() {
			return getRuleContext(Shape_def_stmtContext.class,0);
		}
		public Definition_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definition_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Shexl2Listener ) ((Shexl2Listener)listener).enterDefinition_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Shexl2Listener ) ((Shexl2Listener)listener).exitDefinition_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Shexl2Visitor ) return ((Shexl2Visitor<? extends T>)visitor).visitDefinition_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Definition_stmtContext definition_stmt() throws RecognitionException {
		Definition_stmtContext _localctx = new Definition_stmtContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_definition_stmt);
		try {
			setState(74);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
				enterOuterAlt(_localctx, 1);
				{
				setState(70);
				start_def_stmt();
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 2);
				{
				setState(71);
				prefix_def_stmt();
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 3);
				{
				setState(72);
				base_def_stmt();
				}
				break;
			case T__4:
			case LABEL:
			case IRI_LITERAL:
				enterOuterAlt(_localctx, 4);
				{
				setState(73);
				shape_def_stmt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Start_def_stmtContext extends ParserRuleContext {
		public Call_shape_exprContext shape;
		public Call_shape_exprContext call_shape_expr() {
			return getRuleContext(Call_shape_exprContext.class,0);
		}
		public Start_def_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start_def_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Shexl2Listener ) ((Shexl2Listener)listener).enterStart_def_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Shexl2Listener ) ((Shexl2Listener)listener).exitStart_def_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Shexl2Visitor ) return ((Shexl2Visitor<? extends T>)visitor).visitStart_def_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Start_def_stmtContext start_def_stmt() throws RecognitionException {
		Start_def_stmtContext _localctx = new Start_def_stmtContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_start_def_stmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(T__1);
			setState(77);
			match(T__2);
			setState(78);
			((Start_def_stmtContext)_localctx).shape = call_shape_expr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Prefix_def_stmtContext extends ParserRuleContext {
		public Literal_iri_value_exprContext iri;
		public Literal_iri_value_exprContext literal_iri_value_expr() {
			return getRuleContext(Literal_iri_value_exprContext.class,0);
		}
		public TerminalNode LABEL() { return getToken(Shexl2Parser.LABEL, 0); }
		public Prefix_def_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prefix_def_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Shexl2Listener ) ((Shexl2Listener)listener).enterPrefix_def_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Shexl2Listener ) ((Shexl2Listener)listener).exitPrefix_def_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Shexl2Visitor ) return ((Shexl2Visitor<? extends T>)visitor).visitPrefix_def_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Prefix_def_stmtContext prefix_def_stmt() throws RecognitionException {
		Prefix_def_stmtContext _localctx = new Prefix_def_stmtContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_prefix_def_stmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(T__3);
			setState(82);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LABEL) {
				{
				setState(81);
				match(LABEL);
				}
			}

			setState(84);
			match(T__4);
			setState(85);
			((Prefix_def_stmtContext)_localctx).iri = literal_iri_value_expr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Base_def_stmtContext extends ParserRuleContext {
		public Literal_iri_value_exprContext iri;
		public Literal_iri_value_exprContext literal_iri_value_expr() {
			return getRuleContext(Literal_iri_value_exprContext.class,0);
		}
		public Base_def_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_base_def_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Shexl2Listener ) ((Shexl2Listener)listener).enterBase_def_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Shexl2Listener ) ((Shexl2Listener)listener).exitBase_def_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Shexl2Visitor ) return ((Shexl2Visitor<? extends T>)visitor).visitBase_def_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Base_def_stmtContext base_def_stmt() throws RecognitionException {
		Base_def_stmtContext _localctx = new Base_def_stmtContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_base_def_stmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			match(T__5);
			setState(88);
			((Base_def_stmtContext)_localctx).iri = literal_iri_value_expr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Shape_def_stmtContext extends ParserRuleContext {
		public Call_prefix_exprContext label;
		public Constraint_exprContext expr;
		public Call_prefix_exprContext call_prefix_expr() {
			return getRuleContext(Call_prefix_exprContext.class,0);
		}
		public Constraint_exprContext constraint_expr() {
			return getRuleContext(Constraint_exprContext.class,0);
		}
		public Shape_def_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_shape_def_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Shexl2Listener ) ((Shexl2Listener)listener).enterShape_def_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Shexl2Listener ) ((Shexl2Listener)listener).exitShape_def_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Shexl2Visitor ) return ((Shexl2Visitor<? extends T>)visitor).visitShape_def_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Shape_def_stmtContext shape_def_stmt() throws RecognitionException {
		Shape_def_stmtContext _localctx = new Shape_def_stmtContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_shape_def_stmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			((Shape_def_stmtContext)_localctx).label = call_prefix_expr();
			setState(91);
			((Shape_def_stmtContext)_localctx).expr = constraint_expr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public Literal_exprContext literal_expr() {
			return getRuleContext(Literal_exprContext.class,0);
		}
		public Cardinality_exprContext cardinality_expr() {
			return getRuleContext(Cardinality_exprContext.class,0);
		}
		public Constraint_exprContext constraint_expr() {
			return getRuleContext(Constraint_exprContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Shexl2Listener ) ((Shexl2Listener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Shexl2Listener ) ((Shexl2Listener)listener).exitExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Shexl2Visitor ) return ((Shexl2Visitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_expression);
		try {
			setState(96);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(93);
				literal_expr();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(94);
				cardinality_expr();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(95);
				constraint_expr();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Literal_exprContext extends ParserRuleContext {
		public Literal_real_value_exprContext literal_real_value_expr() {
			return getRuleContext(Literal_real_value_exprContext.class,0);
		}
		public Literal_string_value_exprContext literal_string_value_expr() {
			return getRuleContext(Literal_string_value_exprContext.class,0);
		}
		public Literal_iri_value_exprContext literal_iri_value_expr() {
			return getRuleContext(Literal_iri_value_exprContext.class,0);
		}
		public Literal_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_literal_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Shexl2Listener ) ((Shexl2Listener)listener).enterLiteral_expr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Shexl2Listener ) ((Shexl2Listener)listener).exitLiteral_expr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Shexl2Visitor ) return ((Shexl2Visitor<? extends T>)visitor).visitLiteral_expr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Literal_exprContext literal_expr() throws RecognitionException {
		Literal_exprContext _localctx = new Literal_exprContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_literal_expr);
		try {
			setState(101);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case REAL_LITERAL:
				enterOuterAlt(_localctx, 1);
				{
				setState(98);
				literal_real_value_expr();
				}
				break;
			case STRING_LITERAL:
				enterOuterAlt(_localctx, 2);
				{
				setState(99);
				literal_string_value_expr();
				}
				break;
			case IRI_LITERAL:
				enterOuterAlt(_localctx, 3);
				{
				setState(100);
				literal_iri_value_expr();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Literal_real_value_exprContext extends ParserRuleContext {
		public TerminalNode REAL_LITERAL() { return getToken(Shexl2Parser.REAL_LITERAL, 0); }
		public Literal_real_value_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_literal_real_value_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Shexl2Listener ) ((Shexl2Listener)listener).enterLiteral_real_value_expr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Shexl2Listener ) ((Shexl2Listener)listener).exitLiteral_real_value_expr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Shexl2Visitor ) return ((Shexl2Visitor<? extends T>)visitor).visitLiteral_real_value_expr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Literal_real_value_exprContext literal_real_value_expr() throws RecognitionException {
		Literal_real_value_exprContext _localctx = new Literal_real_value_exprContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_literal_real_value_expr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(REAL_LITERAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Literal_string_value_exprContext extends ParserRuleContext {
		public TerminalNode STRING_LITERAL() { return getToken(Shexl2Parser.STRING_LITERAL, 0); }
		public Literal_string_value_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_literal_string_value_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Shexl2Listener ) ((Shexl2Listener)listener).enterLiteral_string_value_expr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Shexl2Listener ) ((Shexl2Listener)listener).exitLiteral_string_value_expr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Shexl2Visitor ) return ((Shexl2Visitor<? extends T>)visitor).visitLiteral_string_value_expr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Literal_string_value_exprContext literal_string_value_expr() throws RecognitionException {
		Literal_string_value_exprContext _localctx = new Literal_string_value_exprContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_literal_string_value_expr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(STRING_LITERAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Literal_iri_value_exprContext extends ParserRuleContext {
		public TerminalNode IRI_LITERAL() { return getToken(Shexl2Parser.IRI_LITERAL, 0); }
		public Literal_iri_value_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_literal_iri_value_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Shexl2Listener ) ((Shexl2Listener)listener).enterLiteral_iri_value_expr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Shexl2Listener ) ((Shexl2Listener)listener).exitLiteral_iri_value_expr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Shexl2Visitor ) return ((Shexl2Visitor<? extends T>)visitor).visitLiteral_iri_value_expr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Literal_iri_value_exprContext literal_iri_value_expr() throws RecognitionException {
		Literal_iri_value_exprContext _localctx = new Literal_iri_value_exprContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_literal_iri_value_expr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(IRI_LITERAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
